# Hugo-Mechanistic-Interpretability-of-Genomic-Foundation-Models

./: pyproject.toml  requirements.txt
notebooks/: 01_data.ipynb  01_data_exploration.ipynb  01_hf_exploration.ipynb  02_logreg.ipynb  03_ablation_results.ipynb
scripts/: classifier_head_analysis.py  extract_attentions.py  extract_embeddings.py  metrics.py  preprocess.py  process_and_inference.py
src/bowanglab.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
